[package]
name = "rukt"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
rocksdb = "0.21"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2.0", features = ["rand_core", "digest"] }
curve25519-dalek = { version = "4.1", features = ["digest", "rand_core"] }
p256 = { version = "0.13", features = ["ecdsa", "arithmetic", "sha256", "std"] }
signature = "2.0"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
aes = "0.8"
moka = { version = "0.12", features = ["sync"] }
rayon = "1.8"
rfc6979 = "0.4"
clap = { version = "4", features = ["derive", "env"] }

[features]
# Exposes private client verifiers to benches; never enabled in normal builds.
bench-internals = []

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.8"
tower = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
fs_extra = "1.3"
num_cpus = "1.16"
prost = "0.12"

[[bench]]
name = "kt_benchmarks"
harness = false

[[bench]]
name = "verification"
harness = false
required-features = ["bench-internals"]